force-app/main/default/objects/KimbleOne__WorkItemSnapshot__c/KimbleOne__WorkItemSnapshot__c.object-meta.xml
<CustomObject>
    <label>Work Item Snapshot</label>
    <nameField>
        <label>Work Item Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Item Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>