force-app/main/default/objects/KimbleOne__WorkItemSnapshot__c/fields/KimbleOne__ActualUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualUnits__c</fullName>
    <label>Actual Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>