force-app/main/default/objects/KimbleOne__WorkItemSnapshot__c/fields/KimbleOne__IsBlocked__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Blocked</label>
    <type>Checkbox</type>
</CustomField>