force-app/main/default/objects/KimbleOne__WorkItemSnapshot__c/fields/KimbleOne__RemainingUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RemainingUnits__c</fullName>
    <label>Remaining Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>