force-app/main/default/objects/KimbleOne__WorkItemSnapshot__c/fields/KimbleOne__Task__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>KimbleOne__Task__c</referenceTo>
    <relationshipLabel>Work Item Snapshots</relationshipLabel>
    <relationshipName>WorkItemSnapshots</relationshipName>
    <type>Lookup</type>
</CustomField>