force-app/main/default/objects/KimbleOne__WorkItemSnapshot__c/fields/KimbleOne__TrackingPlan__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TrackingPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tracking Plan</label>
    <referenceTo>KimbleOne__TrackingPlan__c</referenceTo>
    <relationshipLabel>Work Item Snapshots</relationshipLabel>
    <relationshipName>WorkItemSnapshots</relationshipName>
    <type>Lookup</type>
</CustomField>